--- a/resume/css/resume.css
+++ b/resume/css/resume.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
-.point {
-  color: #FFC007;
+.strong {
+  color: #00487C;
 }
 
 * {
@@ -10,96 +10,131 @@
   font-family: "Unbounded", cursive;
 }
 
-ul {
-  /* 取消ul設的內縮及樣式 */
-  margin: 0;
-  padding: 0;
+.nav-left {
+  width: 200px;
+  height: 100vh;
+  background-color: #FFC007;
 }
-
-ul.drop-down-menu {
-  /*定義出以下的資料，這是下拉式表單的核心*/
-  border: #ccc 1px solid;
-  /* 這是匡線的部分 */
-  display: inline-block;
-  /*這其實就是同時能夠達成行列元素以及區塊元素的效果 */
-  /* 這個選項可以讓資料 */
-  font-family: Arial, sans-serif;
-  font-size: 13px;
-  /* 控制位置固定在中間點！ */
-  position: fixed;
-  right: 0;
-  top: 50%;
-  width: 8em;
-  margin-top: -2.5em;
-  list-style: none;
-  z-index: 4;
+.nav-left .face {
+  width: 200px;
+  height: 25%;
+  background-image: url(../img/taregt/S__34160684.jpg);
+  background-size: 120%;
+  background-position: top;
 }
-
-ul.drop-down-menu li {
+.nav-left .select-nav {
+  margin-top: 40%;
+}
+.nav-left .select-nav div.drop-down-menu div {
+  float: left;
+  width: 100%;
+  height: 3em;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   position: relative;
   white-space: nowrap;
-  /*絕不換行*/
-  /* 由於上面已經有了，基本的整個匡線了，因此我們只需要右邊的匡線就可以了 */
-  border-right: #ccc 1px solid;
 }
-
-ul.drop-down-menu > li:last-child {
-  /* 大於的符號表示只有第一層級的才有，last-child就是表示，只選取最後一個部分 */
-  /* 此處用none是因為外部早就有匡線了，因此取消掉，才不會重複－ */
-  border-right: none;
-  /* border-right: none; */
+.nav-left .select-nav div.drop-down-menu div :hover {
+  background-color: #ffffff;
+  /* 滑鼠滑入按鈕變色*/
 }
-
-ul.drop-down-menu > li {
-  /* 讓全部的ＬＩ先飄起來 */
-  float: left;
-  /* 只有第一層是靠左對齊*/
-}
-
-ul.drop-down-menu a {
-  background-color: #fff;
+.nav-left .select-nav div.drop-down-menu a {
+  font-size: 24px;
   color: #333;
-  display: block;
   padding: 0px 30px;
   /* 上下 左右 */
   text-decoration: none;
   /* 取消Ａ標籤的底線 */
   line-height: 40px;
   /* 調整整體高度，因為Ａ標籤是屬於行內元素 */
+  display: flex;
+  justify-content: center;
 }
 
-ul.drop-down-menu a:hover {
+.nav-right {
+  position: fixed;
+  right: 1%;
+  top: 40%;
+  width: 40px;
+  margin-top: -120px;
+  z-index: 4;
+  background-color: #FFC007;
+  border-radius: 20px;
+}
+.nav-right ul {
+  /* 取消ul設的內縮及樣式 */
+  margin: 0px;
+  padding: 0px;
+}
+.nav-right ul.drop-down-menu {
+  list-style: none;
+  /*定義出以下的資料，這是下拉式表單的核心*/
+  /* 這是匡線的部分 */
+  /*這其實就是同時能夠達成行列元素以及區塊元素的效果 */
+  /* 這個選項可以讓資料 */
+  font-family: Arial, sans-serif;
+  font-size: 13px;
+  /* 控制位置固定在中間點！ */
+}
+.nav-right ul.drop-down-menu li {
+  position: relative;
+  white-space: nowrap;
+}
+.nav-right ul.drop-down-menu > li {
+  float: left;
+  width: 100%;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+}
+.nav-right ul.drop-down-menu a {
+  font-size: 24px;
+  color: #333;
+  padding: 0px 30px;
+  /* 上下 左右 */
+  text-decoration: none;
+  /* 取消Ａ標籤的底線 */
+  line-height: 40px;
+  /* 調整整體高度，因為Ａ標籤是屬於行內元素 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+.nav-right ul.drop-down-menu a:hover {
   /* 滑鼠滑入按鈕變色*/
-  background-color: #ef5c28;
-  color: #fff;
+  color: #ffffff;
 }
 
 body {
   height: 100000px;
 }
 
-.content {
+.content-page1 {
   width: 100%;
   height: 100vh;
   display: flex;
 }
-.content .content-left {
+.content-page1 .content-left {
   width: 50%;
   height: 100vh;
   display: flex;
   flex-direction: column;
   padding: 13% 5%;
-  background-color: #fffbf0;
+  background-color: #ffffff;
 }
-.content .content-left .small-title {
+.content-page1 .content-left .small-title {
   font-size: 36px;
   margin-bottom: 20px;
 }
-.content .content-left .title {
+.content-page1 .content-left .title {
   font-size: 72px;
   margin-bottom: 20px;
 }
-.content .content-left .plug {
+.content-page1 .content-left .plug {
   background-color: #FFC007;
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -108,12 +143,12 @@ body {
   font-size: 24px;
   border-radius: 2%;
 }
-.content .content-left .introduce {
+.content-page1 .content-left .introduce {
   margin-bottom: 20px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
 }
-.content .content-left .start-btn {
+.content-page1 .content-left .start-btn {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -123,7 +158,7 @@ body {
   font-size: 36px;
   cursor: pointer;
 }
-.content .content-right-check {
+.content-page1 .content-right-check {
   position: absolute;
   left: 50%;
   width: 50%;
@@ -132,10 +167,10 @@ body {
   justify-content: center;
   align-items: center;
 }
-.content .content-right-check :hover.face {
-  transform: scale(1.2, 1.2);
+.content-page1 .content-right-check :hover.face {
+  transform: scale(1.15, 1.15);
 }
-.content .content-right-check .face {
+.content-page1 .content-right-check .face {
   width: 75%;
   height: 70%;
   background-image: url("../img/taregt/S__34160684.jpg");
@@ -147,9 +182,42 @@ body {
   transform: scale(1.1);
   transition: all 1s ease-in-out;
 }
-.content .content-right {
+.content-page1 .content-right {
   position: relative;
   width: 50%;
+  height: 100vh;
+  background: linear-gradient(181.1154931321deg, rgb(149, 168, 181) 1.644486692%, rgb(61, 72, 78) 92.7724968314%);
+  opacity: 0.4;
+}
+
+.content-page2 {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+}
+.content-page2 .content-left {
+  width: 25%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 13% 5%;
+  background-color: #FFC007;
+}
+.content-page2 .content-right-check {
+  position: absolute;
+  left: 50%;
+  width: 75%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.content-page2 .content-right-check :hover.face {
+  transform: scale(1.15, 1.15);
+}
+.content-page2 .content-right {
+  position: relative;
+  width: 75%;
   height: 100vh;
   background: linear-gradient(181.1154931321deg, rgb(149, 168, 181) 1.644486692%, rgb(61, 72, 78) 92.7724968314%);
   opacity: 0.4;
