--- a/resume/css/resume.scss
+++ b/resume/css/resume.scss
@@ -1,11 +1,12 @@
 // 主要的顏色
 
 // 排版格式：長寬 排版 顏色框線 字型 使用者體驗
-$primary:#fffbf0; 
+$primary:#ffffff; 
 $secondary:linear-gradient(181.1154931320949deg, rgba(149, 168, 181,1) 1.6444866920152093%,rgba(61, 72, 78,1) 92.77249683143219%);
 $point:#FFC007;
+$strong:#00487C;
 
-.point{color: $point;}
+.strong{color: $strong;}
 *{
     padding: 0px;
     margin: 0px;
@@ -13,76 +14,139 @@ $point:#FFC007;
     font-family: 'Unbounded', cursive;
 }
 // nav
+.nav-left{
+  width:200px;
+  height: 100vh;
+  background-color: $point;
+
+  // ul{
+  //   /* 取消ul設的內縮及樣式 */
+  //   margin: 0px;
+  //   padding: 0px;}
+
+  .face{
+    width:200px;
+    height: 25%;
+    background-image: url(../img/taregt/S__34160684.jpg);
+    background-size:120%;
+    background-position:top
+
+  }
+  .select-nav{
+    margin-top: 40%;
+    div.drop-down-menu{
+
+        div {
+          float: left;
+          width: 100%;
+          height: 3em;
+          margin-bottom: 20px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          position: relative;
+          white-space: nowrap;
+          :hover{
+            background-color: $primary;
+            /* 滑鼠滑入按鈕變色*/
+            // background-color: $primary;
+            }
+      }
+      a {
+        // background-color: $point;
+       font-size: 24px;
+        color: #333;
+        padding: 0px 30px;
+        /* 上下 左右 */
+        text-decoration: none;
+        /* 取消Ａ標籤的底線 */
+        line-height: 40px;
+        /* 調整整體高度，因為Ａ標籤是屬於行內元素 */
+        display: flex;
+        justify-content: center;
+   
+     
+  
+
+      } 
+      
+      }
+      
+
+    }
+  }
+.nav-right{ position: fixed;
+  right: 1%;
+  top: 40%;
+  width: 40px;
+  margin-top: -120px;
+  z-index: 4;
+  background-color:$point;
+  border-radius: 20px;
 ul{
     /* 取消ul設的內縮及樣式 */
-    margin: 0;
-    padding: 0;
-    
+    margin: 0px;
+    padding: 0px;
   }
   ul.drop-down-menu {
+    list-style: none;
     /*定義出以下的資料，這是下拉式表單的核心*/
-    border: #ccc 1px solid;
+    // border: #ccc 1px solid;
     /* 這是匡線的部分 */
-    display: inline-block;
+   
     /*這其實就是同時能夠達成行列元素以及區塊元素的效果 */
     /* 這個選項可以讓資料 */
     font-family: Arial, sans-serif;
     font-size: 13px;
     /* 控制位置固定在中間點！ */
-    position: fixed;
-    right: 0;
-    top: 50%;
-    width: 8em;
-    margin-top: -2.5em;
-    list-style: none;
-    z-index: 4;
   }
   ul.drop-down-menu li {
     position: relative;
     white-space: nowrap;
-    /*絕不換行*/
-    /* 由於上面已經有了，基本的整個匡線了，因此我們只需要右邊的匡線就可以了 */
-    border-right: #ccc 1px solid;
-  }
-  ul.drop-down-menu > li:last-child {
-    /* 大於的符號表示只有第一層級的才有，last-child就是表示，只選取最後一個部分 */
-    /* 此處用none是因為外部早就有匡線了，因此取消掉，才不會重複－ */
-    border-right: none;
-    /* border-right: none; */
   }
   ul.drop-down-menu>li {
-    /* 讓全部的ＬＩ先飄起來 */
     float: left;
-    /* 只有第一層是靠左對齊*/
+    width: 100%;
+    // 下面這個margin決定了整個LI和最底部的距離，感到疑惑的地方是margin不適應該只對同曾有影響，但我不理解的是，為什麼用padding在dropdown內沒有效果卻在這邊，才有效果
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+
+    // 透過float使其飄起再透過寬度調整達到滿版效果，兩種效果都做到才可以讓原本不會滿版的行內元素變成類似區塊元素
+ 
   }
   ul.drop-down-menu a {
-    background-color: #fff;
+    // background-color: $point;
+   font-size: 24px;
     color: #333;
-    display: block;
     padding: 0px 30px;
     /* 上下 左右 */
     text-decoration: none;
     /* 取消Ａ標籤的底線 */
     line-height: 40px;
     /* 調整整體高度，因為Ａ標籤是屬於行內元素 */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+
   }
   ul.drop-down-menu a:hover {
     /* 滑鼠滑入按鈕變色*/
-    background-color: #ef5c28;
-    color: #fff;
-  
+    // background-color: $primary;
+    color: $primary
+ 
   }
+}
   body {
     height: 100000px;
   }
-
-//內文
-.content{
+//內文1
+.content-page1{
     width: 100%;
     height: 100vh;
     display: flex;
-   
-
     .content-left{
         width: 50%;
         height: 100vh;
@@ -94,12 +158,9 @@ ul{
             font-size: 36px;
             margin-bottom: 20px;
         }
-        .title{
-           
+        .title{        
             font-size: 72px;
             margin-bottom: 20px;
-
-
         }
         .plug{ background-color: $point;
             // 讓字體大小和框框一樣大目前最佳解法
@@ -107,7 +168,6 @@ ul{
             margin-bottom: 20px;
             font-size: 24px;
             border-radius: 2%;
-           
         }
         .introduce{ 
             margin-bottom: 20px;
@@ -131,7 +191,7 @@ ul{
         display: flex;
         justify-content: center;
         align-items: center;
-       :hover.face{transform:scale(1.2,1.2);
+       :hover.face{transform:scale(1.15,1.15);
        }
         .face{
             width: 75%;
@@ -145,8 +205,6 @@ ul{
             transform: scale(1.1);
             transition: all 1s ease-in-out;
         }
-
-
     }
     .content-right{
         position: relative;
@@ -155,3 +213,68 @@ ul{
         background:$secondary;
        opacity: 0.4;}
 }
+
+
+//內文2
+.content-page2{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  .content-left{
+
+      width: 25%;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      padding:13% 5%;
+      background-color:$point;    }
+//       .small-title{
+//           font-size: 36px;
+//           margin-bottom: 20px;
+//       }
+//       .title{        
+//           font-size: 72px;
+//           margin-bottom: 20px;
+//       }
+//       .plug{ background-color: $point;
+//           // 讓字體大小和框框一樣大目前最佳解法
+//           width:fit-content ;
+//           margin-bottom: 20px;
+//           font-size: 24px;
+//           border-radius: 2%;
+//       }
+//       .introduce{ 
+//           margin-bottom: 20px;
+//           font-family: Arial, Helvetica, sans-serif;
+//           font-size: 20px;
+//       }
+//       .start-btn{ 
+//           width: fit-content;
+//           border-radius: 15px;
+//           padding: 5px;
+//           background-color: $point;
+//           font-size: 36px;
+//           cursor: pointer;
+//       }
+//   }
+
+  .content-right-check{
+      position: absolute;
+      left:50%;
+      width: 75%;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+     :hover.face{transform:scale(1.15,1.15);
+     }
+      
+  }
+  .content-right{
+      position: relative;
+      width: 75%;
+      height: 100vh;
+      background:$secondary;
+     opacity: 0.4;}
+}
+  
