--- a/resume/css/resume.css
+++ b/resume/css/resume.css
@@ -13,7 +13,9 @@
 .nav-left {
   width: 200px;
   height: 100vh;
+  position: fixed;
   background-color: #FFC007;
+  z-index: 5;
 }
 .nav-left .face {
   width: 200px;
@@ -25,24 +27,24 @@
 .nav-left .select-nav {
   margin-top: 40%;
 }
+.nav-left .select-nav div.drop-down-menu :hover {
+  background-color: #ffffff;
+  /* 滑鼠滑入按鈕變色*/
+}
 .nav-left .select-nav div.drop-down-menu div {
   float: left;
   width: 100%;
   height: 3em;
-  margin-bottom: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 20px;
   text-align: center;
   position: relative;
   white-space: nowrap;
 }
-.nav-left .select-nav div.drop-down-menu div :hover {
-  background-color: #ffffff;
-  /* 滑鼠滑入按鈕變色*/
-}
 .nav-left .select-nav div.drop-down-menu a {
-  font-size: 24px;
+  font-size: 30px;
   color: #333;
   padding: 0px 30px;
   /* 上下 左右 */
@@ -75,7 +77,6 @@
   /* 這是匡線的部分 */
   /*這其實就是同時能夠達成行列元素以及區塊元素的效果 */
   /* 這個選項可以讓資料 */
-  font-family: Arial, sans-serif;
   font-size: 13px;
   /* 控制位置固定在中間點！ */
 }
@@ -145,7 +146,6 @@ body {
 }
 .content-page1 .content-left .introduce {
   margin-bottom: 20px;
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
 }
 .content-page1 .content-left .start-btn {
@@ -190,35 +190,32 @@ body {
   opacity: 0.4;
 }
 
-.content-page2 {
-  width: 100%;
+.content-page2-check {
+  width: calc(100% - 200px);
   height: 100vh;
-  display: flex;
+  position: absolute;
+  left: 200px;
 }
-.content-page2 .content-left {
-  width: 25%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  padding: 13% 5%;
+.content-page2-check .title {
+  font-size: 72px;
+  margin-bottom: 20px;
+}
+.content-page2-check .small-title {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+.content-page2-check .introduce {
+  font-size: 20px;
+}
+.content-page2-check .insert {
   background-color: #FFC007;
 }
-.content-page2 .content-right-check {
-  position: absolute;
-  left: 50%;
-  width: 75%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.content-page2 .content-right-check :hover.face {
-  transform: scale(1.15, 1.15);
-}
-.content-page2 .content-right {
+
+.content-page2 {
+  width: calc(100% - 200px);
+  height: 10000vh;
   position: relative;
-  width: 75%;
-  height: 100vh;
+  left: 200px;
   background: linear-gradient(181.1154931321deg, rgb(149, 168, 181) 1.644486692%, rgb(61, 72, 78) 92.7724968314%);
   opacity: 0.4;
 }/*# sourceMappingURL=resume.css.map */
