--- a/resume/css/resume.scss
+++ b/resume/css/resume.scss
@@ -5,7 +5,6 @@ $primary:#ffffff;
 $secondary:linear-gradient(181.1154931320949deg, rgba(149, 168, 181,1) 1.6444866920152093%,rgba(61, 72, 78,1) 92.77249683143219%);
 $point:#FFC007;
 $strong:#00487C;
-
 .strong{color: $strong;}
 *{
     padding: 0px;
@@ -17,7 +16,9 @@ $strong:#00487C;
 .nav-left{
   width:200px;
   height: 100vh;
+  position: fixed;
   background-color: $point;
+  z-index: 5;
 
   // ul{
   //   /* 取消ul設的內縮及樣式 */
@@ -30,32 +31,30 @@ $strong:#00487C;
     background-image: url(../img/taregt/S__34160684.jpg);
     background-size:120%;
     background-position:top
-
   }
   .select-nav{
     margin-top: 40%;
     div.drop-down-menu{
-
+      :hover{
+        background-color: $primary;
+        /* 滑鼠滑入按鈕變色*/
+        // background-color: $primary;
+        }
         div {
           float: left;
           width: 100%;
           height: 3em;
-          margin-bottom: 20px;
           display: flex;
           justify-content: center;
           align-items: center;
+          margin-bottom: 20px;
           text-align: center;
           position: relative;
-          white-space: nowrap;
-          :hover{
-            background-color: $primary;
-            /* 滑鼠滑入按鈕變色*/
-            // background-color: $primary;
-            }
+          white-space: nowrap;    
       }
       a {
         // background-color: $point;
-       font-size: 24px;
+       font-size: 30px;
         color: #333;
         padding: 0px 30px;
         /* 上下 左右 */
@@ -64,16 +63,8 @@ $strong:#00487C;
         line-height: 40px;
         /* 調整整體高度，因為Ａ標籤是屬於行內元素 */
         display: flex;
-        justify-content: center;
-   
-     
-  
-
-      } 
-      
+        justify-content: center;}      
       }
-      
-
     }
   }
 .nav-right{ position: fixed;
@@ -94,10 +85,8 @@ ul{
     /*定義出以下的資料，這是下拉式表單的核心*/
     // border: #ccc 1px solid;
     /* 這是匡線的部分 */
-   
     /*這其實就是同時能夠達成行列元素以及區塊元素的效果 */
     /* 這個選項可以讓資料 */
-    font-family: Arial, sans-serif;
     font-size: 13px;
     /* 控制位置固定在中間點！ */
   }
@@ -144,6 +133,7 @@ ul{
   }
 //內文1
 .content-page1{
+  // visibility: hidden;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -171,7 +161,6 @@ ul{
         }
         .introduce{ 
             margin-bottom: 20px;
-            font-family: Arial, Helvetica, sans-serif;
             font-size: 20px;
         }
         .start-btn{ 
@@ -216,65 +205,34 @@ ul{
 
 
 //內文2
-.content-page2{
-  width: 100%;
+.content-page2-check{
+  width:calc(100% - 200px) ;
   height: 100vh;
-  display: flex;
-  .content-left{
-
-      width: 25%;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      padding:13% 5%;
-      background-color:$point;    }
-//       .small-title{
-//           font-size: 36px;
-//           margin-bottom: 20px;
-//       }
-//       .title{        
-//           font-size: 72px;
-//           margin-bottom: 20px;
-//       }
-//       .plug{ background-color: $point;
-//           // 讓字體大小和框框一樣大目前最佳解法
-//           width:fit-content ;
-//           margin-bottom: 20px;
-//           font-size: 24px;
-//           border-radius: 2%;
-//       }
-//       .introduce{ 
-//           margin-bottom: 20px;
-//           font-family: Arial, Helvetica, sans-serif;
-//           font-size: 20px;
-//       }
-//       .start-btn{ 
-//           width: fit-content;
-//           border-radius: 15px;
-//           padding: 5px;
-//           background-color: $point;
-//           font-size: 36px;
-//           cursor: pointer;
-//       }
-//   }
-
-  .content-right-check{
-      position: absolute;
-      left:50%;
-      width: 75%;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-     :hover.face{transform:scale(1.15,1.15);
-     }
-      
+  position:absolute;
+  left:200px;
+  .title{ font-size: 72px;
+    margin-bottom: 20px;}
+    .small-title{
+      font-size: 36px;
+            margin-bottom: 20px;
+    }
+  .introduce{
+    font-size: 20px;
   }
-  .content-right{
-      position: relative;
-      width: 75%;
-      height: 100vh;
-      background:$secondary;
-     opacity: 0.4;}
+  .insert{
+    background-color: #FFC007;
+  }
+ 
+
 }
-  
+.content-page2{
+  width: calc(100% - 200px) ;
+  height: 10000vh;
+  position: relative;
+  left: 200px;
+  background:$secondary ;
+  opacity: 0.4;
+
+ 
+
+}
