--- a/resume/css/resume.scss
+++ b/resume/css/resume.scss
@@ -5,6 +5,7 @@ $primary:#ffffff;
 $secondary:linear-gradient(181.1154931320949deg, rgba(149, 168, 181,1) 1.6444866920152093%,rgba(61, 72, 78,1) 92.77249683143219%);
 $point:#FFC007;
 $strong:#00487C;
+$sup:#9d5f00;
 .strong{color: $strong;}
 *{
     padding: 0px;
@@ -129,7 +130,7 @@ ul{
   }
 }
   body {
-    height: 100000px;
+    height: 400vh;
   }
 //內文1
 .content-page1{
@@ -206,28 +207,88 @@ ul{
 
 //內文2
 .content-page2-check{
+  background-color: greenyellow;
   width:calc(100% - 200px) ;
   height: 100vh;
   position:absolute;
   left:200px;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
+ padding: 100px;
+ z-index: 5;
+ 
+ .content-page2-check-text{
+  height: 50vh;
   .title{ font-size: 72px;
-    margin-bottom: 20px;}
+    margin-bottom: 20px;
+  color: #000000;}
     .small-title{
       font-size: 36px;
-            margin-bottom: 20px;
+      margin-bottom: 20px;
     }
   .introduce{
     font-size: 20px;
+    margin-bottom: 50px;
   }
+}
   .insert{
-    background-color: #FFC007;
-  }
- 
+    background-color: #000000;
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    div .turn{display:flex ;
 
+      //可能要改一下
+     hr{border: dashed 0.5px; width:85%;border-color: $sup;margin:auto; z-index: 6;
+
+    }
+  }
+    .insert-left{
+      width: 30%;
+      height: 50vh;
+      background-color:rgb(0, 0, 0);
+      .left-top{
+        width: 100%;
+        height: 25vh;
+        background-color:rgb(0, 240, 12);
+      }
+      .left-bottom{
+        width: 100%;
+        height: 25vh;
+        background-color:pink ;
+      }
+      //可能要改一下
+      hr{border: dashed 0.5px; width:85%;border-color: $sup;margin:auto;}
+    }
+    .insert-right{
+      width: 30%;
+      height: 50vh;
+
+      .right-top{
+        width: 100%;
+        height: 25vh;
+        background-color: green;
+      }
+      .right-bottom{
+        width: 100%;
+        height: 25vh;
+        background-color: purple;
+      }
+      hr{border: dashed 0.5px; width:85%;border-color: $sup;margin:auto;}
+    }
+    .insert-text{
+      width: 40%;
+      height: 50vh;
+      margin-left: 30px;
+      background-color:red;
+    }
+  }
 }
 .content-page2{
   width: calc(100% - 200px) ;
-  height: 10000vh;
+  height: 100vh;
   position: relative;
   left: 200px;
   background:$secondary ;
