--- a/resume/css/resume.css
+++ b/resume/css/resume.css
@@ -190,8 +190,7 @@ body {
   opacity: 0.4;
 }
 
-.content-page2-check {
-  background-color: greenyellow;
+.copy {
   width: calc(100% - 200px);
   height: 100vh;
   position: absolute;
@@ -201,7 +200,20 @@ body {
   align-items: center;
   justify-content: center;
   padding: 100px;
-  z-index: 5;
+  background: linear-gradient(181.1154931321deg, rgb(149, 168, 181) 1.644486692%, rgb(61, 72, 78) 92.7724968314%);
+  opacity: 0.4;
+}
+
+.content-page2-check {
+  width: calc(100% - 200px);
+  height: 100vh;
+  position: absolute;
+  left: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 100px;
 }
 .content-page2-check .content-page2-check-text {
   height: 50vh;
@@ -219,75 +231,100 @@ body {
   font-size: 20px;
   margin-bottom: 50px;
 }
-.content-page2-check .insert {
-  background-color: #000000;
+.content-page2-check .insert-all {
   width: 100%;
-  height: 50vh;
+  height: calc(50vh + 40px);
   display: flex;
 }
-.content-page2-check .insert div .turn {
+.content-page2-check .insert-all .insert {
+  background-color: #000000;
+  width: 70%;
+  padding: 20px;
   display: flex;
 }
-.content-page2-check .insert div .turn hr {
-  border: dashed 0.5px;
-  width: 85%;
-  border-color: #9d5f00;
-  margin: auto;
-  z-index: 6;
+.content-page2-check .insert-all .insert div .turn {
+  display: flex;
 }
-.content-page2-check .insert .insert-left {
-  width: 30%;
+.content-page2-check .insert-all .insert .insert-left {
+  width: 50%;
   height: 50vh;
   background-color: rgb(0, 0, 0);
+  border-right: dashed 1px #FFC007;
+  font-size: 36px;
+  color: #FFC007;
 }
-.content-page2-check .insert .insert-left .left-top {
+.content-page2-check .insert-all .insert .insert-left .left-top {
   width: 100%;
   height: 25vh;
-  background-color: rgb(0, 240, 12);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  border-bottom: dashed 1px #FFC007;
 }
-.content-page2-check .insert .insert-left .left-bottom {
+.content-page2-check .insert-all .insert .insert-left .left-top p {
+  font-size: 24px;
+  color: #ffffff;
+}
+.content-page2-check .insert-all .insert .insert-left .left-bottom {
   width: 100%;
   height: 25vh;
-  background-color: pink;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
-.content-page2-check .insert .insert-left hr {
-  border: dashed 0.5px;
-  width: 85%;
-  border-color: #9d5f00;
-  margin: auto;
+.content-page2-check .insert-all .insert .insert-left .left-bottom p {
+  font-size: 24px;
+  color: #ffffff;
 }
-.content-page2-check .insert .insert-right {
+.content-page2-check .insert-all .insert .insert-right {
+  width: 50%;
+  height: 50vh;
+  font-size: 36px;
+  color: #FFC007;
+}
+.content-page2-check .insert-all .insert .insert-right .right-top {
+  width: 100%;
+  height: 25vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-bottom: dashed 1px #FFC007;
+}
+.content-page2-check .insert-all .insert .insert-right .right-top p {
+  font-size: 24px;
+  color: #ffffff;
+}
+.content-page2-check .insert-all .insert .insert-right .right-bottom {
+  width: 100%;
+  height: 25vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.content-page2-check .insert-all .insert .insert-right .right-bottom p {
+  font-size: 24px;
+  color: #ffffff;
+}
+.content-page2-check .insert-all .insert-text {
   width: 30%;
-  height: 50vh;
-}
-.content-page2-check .insert .insert-right .right-top {
-  width: 100%;
-  height: 25vh;
-  background-color: green;
-}
-.content-page2-check .insert .insert-right .right-bottom {
-  width: 100%;
-  height: 25vh;
-  background-color: purple;
-}
-.content-page2-check .insert .insert-right hr {
-  border: dashed 0.5px;
-  width: 85%;
-  border-color: #9d5f00;
-  margin: auto;
-}
-.content-page2-check .insert .insert-text {
-  width: 40%;
-  height: 50vh;
+  height: calc(50vh + 40px);
   margin-left: 30px;
-  background-color: red;
 }
-
-.content-page2 {
-  width: calc(100% - 200px);
-  height: 100vh;
-  position: relative;
-  left: 200px;
-  background: linear-gradient(181.1154931321deg, rgb(149, 168, 181) 1.644486692%, rgb(61, 72, 78) 92.7724968314%);
-  opacity: 0.4;
+.content-page2-check .insert-all .insert-text .title {
+  font-size: 36px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.content-page2-check .insert-all .insert-text .introduce {
+  font-size: 23px;
+  line-height: 40px;
+  margin-bottom: 10px;
+  list-style: circle;
+}
+.content-page2-check .insert-all .insert-text .introduce ul li {
+  text-indent: -1em;
 }/*# sourceMappingURL=resume.css.map */
