--- a/resume/css/resume.scss
+++ b/resume/css/resume.scss
@@ -206,8 +206,18 @@ ul{
 
 
 //內文2
+.copy{  width:calc(100% - 200px) ;
+  height: 100vh;
+  position:absolute;
+  left:200px;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
+ padding: 100px;
+ background:$secondary;
+opacity: 0.4;}
 .content-page2-check{
-  background-color: greenyellow;
   width:calc(100% - 200px) ;
   height: 100vh;
   position:absolute;
@@ -217,8 +227,8 @@ ul{
  align-items: center;
  justify-content: center;
  padding: 100px;
- z-index: 5;
- 
+
+
  .content-page2-check-text{
   height: 50vh;
   .title{ font-size: 72px;
@@ -233,67 +243,110 @@ ul{
     margin-bottom: 50px;
   }
 }
+.insert-all{    width: 100%;
+  height: calc(50vh + 40px);
+  display: flex;
+
   .insert{
     background-color: #000000;
-    width: 100%;
-    height: 50vh;
+    width:70%;
+    padding: 20px;
     display: flex;
     div .turn{display:flex ;
 
       //可能要改一下
-     hr{border: dashed 0.5px; width:85%;border-color: $sup;margin:auto; z-index: 6;
-
-    }
   }
     .insert-left{
-      width: 30%;
+      width: 50%;
       height: 50vh;
       background-color:rgb(0, 0, 0);
+      border-right:dashed 1px #FFC007;
+      font-size:36px ;
+      color: $point;
+
       .left-top{
         width: 100%;
         height: 25vh;
-        background-color:rgb(0, 240, 12);
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        border-bottom:dashed 1px #FFC007;
+        p{
+          font-size:24px ;
+          color: $primary;
+      }
       }
       .left-bottom{
         width: 100%;
         height: 25vh;
-        background-color:pink ;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        p{
+          font-size:24px ;
+          color: $primary;
       }
-      //可能要改一下
-      hr{border: dashed 0.5px; width:85%;border-color: $sup;margin:auto;}
+      }
     }
     .insert-right{
-      width: 30%;
+      width: 50%;
       height: 50vh;
+      font-size:36px ;
+      color: $point;
+      
 
       .right-top{
         width: 100%;
         height: 25vh;
-        background-color: green;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        border-bottom:dashed 1px #FFC007;
+        p{
+          font-size:24px ;
+          color: $primary;
+      }
       }
       .right-bottom{
         width: 100%;
         height: 25vh;
-        background-color: purple;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        p{
+          font-size:24px ;
+          color: $primary;
       }
-      hr{border: dashed 0.5px; width:85%;border-color: $sup;margin:auto;}
+      }
+
     }
-    .insert-text{
-      width: 40%;
-      height: 50vh;
-      margin-left: 30px;
-      background-color:red;
+
+  }
+  .insert-text{
+    width: 30%;
+    height: calc(50vh + 40px);;
+    margin-left: 30px;
+  
+
+    .title{
+      font-size: 36px;
+      text-align: center; margin-bottom: 10px;
+   
+    }
+    .introduce{
+      font-size: 23px;
+      line-height: 40px;
+      margin-bottom: 10px;
+      list-style:circle;
+      ul{
+      li{
+        text-indent: -1em;
+      }}
     }
   }
 }
-.content-page2{
-  width: calc(100% - 200px) ;
-  height: 100vh;
-  position: relative;
-  left: 200px;
-  background:$secondary ;
-  opacity: 0.4;
-
- 
-
 }
