--- a/resume/css/resume.scss
+++ b/resume/css/resume.scss
@@ -332,10 +332,13 @@ opacity: 0.4;}
     height: calc(50vh + 40px);;
     margin-left: 30px;
 
-  
-   
 
-  
+    // 未解之謎86行
+    // ol{
+
+    //   li{display:"block";}
+    // }
+
 
     .title{
       font-size: 36px;
