--- a/resume/css/resume.css
+++ b/resume/css/resume.css
@@ -110,7 +110,7 @@
 }
 
 body {
-  height: 400vh;
+  height: 300vh;
 }
 
 .content-page1 {
@@ -189,8 +189,13 @@ body {
   opacity: 0.4;
 }
 
+.left {
+  width: 200px;
+  height: 100vh;
+}
+
 .copy {
-  width: calc(100% - 200px);
+  width: 100%;
   height: 100vh;
   position: absolute;
   left: 200px;
@@ -206,13 +211,12 @@ body {
 .content-page2-check {
   width: calc(100% - 200px);
   height: 100vh;
-  position: absolute;
-  left: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 100px;
+  z-index: 4;
 }
 .content-page2-check .content-page2-check-text {
   height: 50vh;
@@ -232,7 +236,7 @@ body {
 }
 .content-page2-check .insert-all {
   width: 100%;
-  height: calc(50vh + 40px);
+  height: calc(40vh + 40px);
   display: flex;
 }
 .content-page2-check .insert-all .insert {
@@ -246,7 +250,7 @@ body {
 }
 .content-page2-check .insert-all .insert .insert-left {
   width: 50%;
-  height: 50vh;
+  height: 100%;
   background-color: rgb(0, 0, 0);
   border-right: dashed 1px #FFC007;
   font-size: 36px;
@@ -254,7 +258,7 @@ body {
 }
 .content-page2-check .insert-all .insert .insert-left .left-top {
   width: 100%;
-  height: 25vh;
+  height: 50%;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -267,7 +271,7 @@ body {
 }
 .content-page2-check .insert-all .insert .insert-left .left-bottom {
   width: 100%;
-  height: 25vh;
+  height: 50%;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -279,13 +283,13 @@ body {
 }
 .content-page2-check .insert-all .insert .insert-right {
   width: 50%;
-  height: 50vh;
+  height: 100%;
   font-size: 36px;
   color: #FFC007;
 }
 .content-page2-check .insert-all .insert .insert-right .right-top {
   width: 100%;
-  height: 25vh;
+  height: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -298,7 +302,7 @@ body {
 }
 .content-page2-check .insert-all .insert .insert-right .right-bottom {
   width: 100%;
-  height: 25vh;
+  height: 50%;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -322,4 +326,9 @@ body {
   font-size: 23px;
   line-height: 40px;
   margin-bottom: 10px;
+}
+
+.content-page3 {
+  display: flex;
+  padding-top: 10px;
 }/*# sourceMappingURL=resume.css.map */
