--- a/resume/css/resume.scss
+++ b/resume/css/resume.scss
@@ -20,6 +20,7 @@ $sup:#9d5f00;
   position: fixed;
   background-color: $point;
   z-index: 5;
+  // display: none;
 
   // ul{
   //   /* 取消ul設的內縮及樣式 */
@@ -131,7 +132,7 @@ ul{
   }
 }
   body {
-    height: 400vh;
+    height: 300vh;
   }
 //內文1
 .content-page1{
@@ -207,7 +208,8 @@ ul{
 
 
 //內文2
-.copy{  width:calc(100% - 200px) ;
+.left{width:200px;height:100vh;}
+.copy{  width:calc(100% ) ;
   height: 100vh;
   position:absolute;
   left:200px;
@@ -221,13 +223,14 @@ opacity: 0.4;}
 .content-page2-check{
   width:calc(100% - 200px) ;
   height: 100vh;
-  position:absolute;
-  left:200px;
+  // position:absolute;
+  // left:200px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 100px;
+ z-index: 4;
 
 
  .content-page2-check-text{
@@ -245,7 +248,7 @@ opacity: 0.4;}
   }
 }
 .insert-all{    width: 100%;
-  height: calc(50vh + 40px);
+  height: calc(40vh + 40px);
   display: flex;
 
   .insert{
@@ -259,7 +262,7 @@ opacity: 0.4;}
   }
     .insert-left{
       width: 50%;
-      height: 50vh;
+      height: 100%;
       background-color:rgb(0, 0, 0);
       border-right:dashed 1px #FFC007;
       font-size:36px ;
@@ -267,7 +270,7 @@ opacity: 0.4;}
 
       .left-top{
         width: 100%;
-        height: 25vh;
+        height: 50%;
         display: flex;
         justify-content: center;
         flex-direction: column;
@@ -280,27 +283,27 @@ opacity: 0.4;}
       }
       .left-bottom{
         width: 100%;
-        height: 25vh;
+        height: 50%;
         display: flex;
+
         justify-content: center;
         flex-direction: column;
         align-items: center;
         p{
           font-size:24px ;
-          color: $primary;
-      }
+          color: $primary;   }
       }
     }
     .insert-right{
       width: 50%;
-      height: 50vh;
+      height: 100%;
       font-size:36px ;
       color: $point;
       
 
       .right-top{
         width: 100%;
-        height: 25vh;
+        height: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -313,7 +316,7 @@ opacity: 0.4;}
       }
       .right-bottom{
         width: 100%;
-        height: 25vh;
+        height: 50%;
         display: flex;
         justify-content: center;
         flex-direction: column;
@@ -331,15 +334,6 @@ opacity: 0.4;}
     width: 30%;
     height: calc(50vh + 40px);;
     margin-left: 30px;
-
-
-    // 未解之謎86行
-    // ol{
-
-    //   li{display:"block";}
-    // }
-
-
     .title{
       font-size: 36px;
       text-align: center; margin-bottom: 10px;
@@ -349,8 +343,12 @@ opacity: 0.4;}
       line-height: 40px;
       margin-bottom: 10px;
       // 要修理
-
     }
   }
 }
+}
+//第三章
+.content-page3{
+  display: flex;
+  padding-top:10px;
 }
