--- a/resume/css/resume.css
+++ b/resume/css/resume.css
@@ -195,7 +195,7 @@ body {
 }
 
 .copy {
-  width: 100%;
+  width: calc(100% - 200px);
   height: 100vh;
   position: absolute;
   left: 200px;
@@ -331,4 +331,31 @@ body {
 .content-page3 {
   display: flex;
   padding-top: 10px;
+  position: relative;
+  z-index: 1;
+}
+.content-page3 .design-fell {
+  width: 40%;
+  height: 40%;
+  position: absolute;
+  top: 55%;
+  left: 45%;
+  background: linear-gradient(181.1154931321deg, rgb(149, 168, 181) 1.644486692%, rgb(61, 72, 78) 92.7724968314%);
+  opacity: 0.4;
+}
+.content-page3 .title {
+  font-size: 48px;
+  text-align: center;
+  position: relative;
+  top: 10%;
+}
+.content-page3 .contral {
+  width: 200px;
+  height: 80vh;
+}
+
+footer {
+  width: 100%;
+  height: 20vh;
+  background-color: #FFC007;
 }/*# sourceMappingURL=resume.css.map */
