--- a/resume/css/swiper.css
+++ b/resume/css/swiper.css
@@ -1,13 +1,13 @@
 .swiper {
    width:calc(100% - 400px);
     height: 80vh;
-
+    overflow: hidden;
   }
 
   .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
+    
 
     /* Center slide text vertically */
     display: -webkit-box;
@@ -22,13 +22,12 @@
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
-    background-color: aqua;
   }
 
   .swiper-slide img {
     display: block;
-    width:calc(100% - 200px);
+    width:calc(100% - 400px);
     height: 100vh;
-    object-fit: cover;
+    object-fit: contain;
  
   }
