--- a/resume/css/resume.scss
+++ b/resume/css/resume.scss
@@ -360,8 +360,8 @@ opacity: 0.4;}
     position:absolute;
     top: 55%;
     left: 45%;
-    background:$secondary;
-    opacity: 0.4;
+    background: rgba(149, 168, 181,1);
+    opacity: 0.2;
   }
   .title{font-size: 48px;
     text-align: center;
@@ -373,7 +373,14 @@ top: 10%;}
   }
 }
 footer{
-  width:100%;
-  height:20vh;
+  width:auto;
+  height:8vh;
+  margin-top: 12vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #FFC007;
+div{position:relative;
+left:85px}
 }
