--- a/resume/css/resume.css
+++ b/resume/css/resume.css
@@ -340,8 +340,8 @@ body {
   position: absolute;
   top: 55%;
   left: 45%;
-  background: linear-gradient(181.1154931321deg, rgb(149, 168, 181) 1.644486692%, rgb(61, 72, 78) 92.7724968314%);
-  opacity: 0.4;
+  background: rgb(149, 168, 181);
+  opacity: 0.2;
 }
 .content-page3 .title {
   font-size: 48px;
@@ -355,7 +355,15 @@ body {
 }
 
 footer {
-  width: 100%;
-  height: 20vh;
+  width: auto;
+  height: 8vh;
+  margin-top: 12vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #FFC007;
+}
+footer div {
+  position: relative;
+  left: 85px;
 }/*# sourceMappingURL=resume.css.map */
