--- a/resume/css/resume.css
+++ b/resume/css/resume.css
@@ -1,13 +1,52 @@
 @charset "UTF-8";
-.hidden {
-  width: 350px;
-  height: 350px;
-  font-size: 24px;
-  float: left;
+body {
   position: relative;
-  left: 30%;
-  background: linear-gradient(181.1154931321deg, rgb(149, 168, 181) 1.644486692%, rgb(61, 72, 78) 92.7724968314%);
-  color: #ffffff;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+#close-btn {
+  display: none;
+}
+
+label {
+  display: inline-block;
+  cursor: pointer;
+}
+
+#close-btn:checked ~ .hidden1 {
+  transform: 3s;
+  display: unset;
+}
+
+.hidden1 {
+  display: none;
+  width: 600px;
+  height: 400px;
+  font-size: 24px;
+  position: fixed;
+  text-align: center;
+  left: calc(50% - 300px);
+  top: 30%;
+  background: #FFC007;
+  color: #00487C;
+  z-index: 7;
+}
+.hidden1 .close {
+  color: white;
+  background-color: red;
+  width: 8%;
+  height: 8%;
+  text-align: center;
+  cursor: pointer;
+  display: block;
+}
+.hidden1 h5 {
+  position: absolute;
+  left: 45%;
+  top: 80%;
 }
 
 .strong {
@@ -22,6 +61,7 @@
 }
 
 .nav-left {
+  display: none;
   width: 200px;
   height: 100vh;
   position: fixed;
