--- a/mirsoft/css/mirsoft.css
+++ b/mirsoft/css/mirsoft.css
@@ -190,12 +190,22 @@ nav .mobile {
     line-height: 50px;
     cursor: pointer;
   }
-  nav .mobile label ::before {
-    content: 三;
-  }
   nav .mobile label img {
     width: 30px;
     vertical-align: middle;
+  }
+  nav .mobile label::before {
+    content: "三";
+  }
+  nav .mobile input:checked + label::before {
+    display: none;
+  }
+  nav .mobile label::after {
+    content: "X";
+    display: none;
+  }
+  nav .mobile input:checked + label::after {
+    display: block;
   }
   nav .mobile .menu {
     display: none;
@@ -208,7 +218,7 @@ nav .mobile {
   }
   nav .mobile .menu li a {
     display: block;
-    line-height: 0px;
+    line-height: 50px;
     font-size: 18px;
     color: #5d5d5d;
     text-align: left;
@@ -255,8 +265,34 @@ section {
   justify-content: center;
 }
 section .bander {
+  position: relative;
   display: flex;
   justify-content: center;
+}
+section .bander .content {
+  background-color: aqua;
+  width: 35%;
+  height: 51%;
+  font-weight: 600;
+  position: absolute;
+  left: 10%;
+  top: 20%;
+}
+section .bander .content .title {
+  background-color: white;
+  color: #950c17;
+  display: inline;
+}
+section .bander .content .big-title {
+  font-size: 2.3125rem;
+  margin-bottom: 1.25rem;
+  font-weight: 600;
+}
+section .bander .content .buy-btn {
+  display: inline;
+  background-color: #000000;
+  color: white;
+  padding-top: 30px, 15px;
 }
 section .bander picture img {
   width: 100%;
