--- a/mirsoft/css/mirsoft.scss
+++ b/mirsoft/css/mirsoft.scss
@@ -339,36 +339,82 @@ section{
     display: flex;
     justify-content: center;
     .bander{
+        
         position: relative;
         display: flex;
         justify-content: center;
+        
        
     .content{
         background-color: aqua;
         width: 35%;
         height: 51%;
-        font-weight: 600;
+        padding: 48PX;
 
         position: absolute;
         left: 10%;
-        top: 20%;
+        top: 22.58%;
+        @media (max-width:1082px) {
+            width: 98%;
+            top:90%;
+            left:1%;
+            background-color: #fff;
+            box-shadow: 0 0.0625rem 0.125rem rgb(0 0 0 / 11%), 0 0.1875rem 0.4375rem rgb(0 0 0 / 13%);            
+        }
+        @media(max-width:858px){
+            width: 100%;
+            top: calc(100%);
+            left:0%;
+            padding-top: 24px;
+            padding-bottom: 16px;
+            padding-left: 12px;
+            padding-right: 12px;
+        }
+        .content-include{
+            // background-color: #950c17;
+            justify-content: center;
+            font-weight: 600;
+
+            // 要在裡面進行修改
 
         .title{
+            padding-TOP:6PX;
+            padding-bottom: 6px;
+            padding-left: 12px;
+            padding-right:12px ;
+            margin-bottom: 20px;
             background-color: white;
             color:#950c17;
-            display:inline
+            display:inline;
+            font-size:16px;
         }
         .big-title{
             font-size: 2.3125rem;
+            margin-top: 10px;
             margin-bottom: 1.25rem;
-            font-weight: 600;          
+            font-weight: 600; 
+            @media (max-width:1400px) {
+                font-size: 29px;
+            }         
+            @media(max-width:842px){
+                font-size: 16px;
+            }
         }
+        .text{
+            margin-bottom: 40px;
+        }
+       
         .buy-btn{
             display: inline;
             background-color: #000000;
             color: white;
-            padding-top:30px,15px;
+            
+            padding-top:10px;
+            padding-bottom:10px;
+            padding-left:12px;
+            padding-right:12px;
         }
+    }
     }
         picture{
             img {
