--- a/mirsoft/css/mirsoft.scss
+++ b/mirsoft/css/mirsoft.scss
@@ -18,11 +18,18 @@ nav {
     height: 56px;
     margin: auto;
 
-    padding-left: 34px;
-    padding-right: 34px;
+    padding-left: 65px;
+    padding-right: 50px;
 
     display: flex;
     justify-content: space-between;
+
+    // 改變padding
+    @media (max-width:1080px) {
+        padding-left: 24px;
+        padding-right: 14px;
+        
+    }
     // 關閉漢堡條
 .mobile{
     display: none;
@@ -33,6 +40,7 @@ nav {
         height: 100%;
         margin-right: 73px;
         padding-left: 10px;
+        padding-right: 11px;
 
         display: flex;
         justify-content: space-between;
@@ -44,12 +52,14 @@ nav {
         .logo {
             width: 110px;
             height: 25px;
-            
-
+            margin-right: 4px;
+           
             background-image: url(../img/RE1Mu3b.png);
             background-position: center;
             background-size: contain;
             background-repeat: no-repeat;
+
+            @media (max-width:1080px) {margin-right: 8px;}
 
         }
 
@@ -147,14 +157,14 @@ nav {
             }
 
             .shopping {
-                margin-right: 20px;
+                margin-left: 10px;
                 background-image: url(../img/cart.svg);
             }
 
             .login {
                 width: 33px;
                 height: 33px;
-                margin-left: 12px;
+                margin-left: 5px;
                 background-image: url(../img/login.svg);
 
             }
@@ -203,7 +213,7 @@ nav {
 // 啟動手機版本變形
 @media (max-width:860px) {
     nav {
-        padding: 10px;
+        padding: 5px;
         // background-color: bisque;
         // 將功能列調整位置
         .logo{
@@ -225,6 +235,7 @@ nav {
         .mobile{display: block;
             // 利用絕對位置漂浮特性做到滿版效果
             position: absolute;
+            z-index: 2;
      
     //    這是要扣除掉NAV的10PX的PADDING
            width: calc(100%);
